GRAILS-8168 : skip gsp-reload-app for now, Added debug config for gsp-reload-app .