@@ -52,5 +52,12 @@ grails.project.dependency.resolution = {
         build ":tomcat:$grailsVersion"
         test ":geb:$gebVersion"
     }
+    
+    
+}
+
+grails.tomcat.jvmArgs = ["-XX:+DisableExplicitGC", '-Xmx768M', '-Xms256M', '-XX:PermSize=92m', '-XX:MaxPermSize=192m']
+if(System.getProperty('grails.debug')) {
+  grails.tomcat.jvmArgs = ["-Xdebug","-Xnoagent","-Dgrails.full.stacktrace=true","-Djava.compiler=NONE","-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005"]
 }
 
